--- a/HW-15/intex.html
+++ b/HW-15/intex.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <meta name="viewport" content="width=<div class="holder">
+     <link rel="stylesheet" href="style.css">   
     <title>Document</title>
 </head>
 <body>
@@ -14,5 +14,6 @@
         <div class="item">4</div>
         <div class="item">5</div>
         </div>
+    
 </body>
 </html>
